# TechTix

./: .gitignore  .isort.cfg  CONTRIBUTING.md  LICENSE  README.md  amplify.yml  package-lock.json  package.json
.devcontainer/: devcontainer.json
.github/workflows/: FE-deploy-dev-to-stage-pipeline.yml  FE-deploy-stage-to-prod-pipeline.yml  FE-pr-and-deploy-to-dev-pipeline.yml  FE-pr-and-deploy-to-stage-pipeline.yml  deploy-main-to-stage-pipeline.yml  deploy-stage-to-prod-pipeline.yml  deploy_backend.yml  fe_deploy_to_main.yml  fe_pr_and_deploy.yml  formatting_backend.yml  formatting_frontend.yml  pr-and-deploy-to-main-pipeline.yml
backend/: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUITING.md  Pipfile  README.md  env  event_s3_uploads.py  ignore-this.txt  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  ruff.toml  serverless.yaml
backend/aws/: cognito_settings.py  security_settings.py
backend/constants/: common_constants.py  konhub_constants.py
backend/controller/: admin_router.py  app_controller.py  certificate_router.py  discount_router.py  evaluation_router.py  event_router.py  faqs_controller.py  file_upload_router.py  payment_controller.py  preregistration_router.py  pycon_controller.py  pycon_registration_controller.py  registration_router.py  user_router.py
backend/external_gateway/: konfhub_gateway.py
backend/functions/: event_s3_uploads.py  events_upload_handler.py  payment_handling.py
backend/model/: entities.py
backend/model/admins/: admin.py
backend/model/certificates/: certificate.py
backend/model/discount/: discount.py
backend/model/email/: email.py
backend/model/evaluations/: evaluation.py  evaluations_constants.py
backend/model/events/: event.py  events_constants.py
backend/model/faqs/: faqs.py
backend/model/file_uploads/: file_upload.py  file_upload_constants.py
backend/model/konfhub/: konfhub.py
backend/model/payments/: payments.py
backend/model/preregistrations/: preregistration.py  preregistrations_constants.py
backend/model/pycon_registrations/: pycon_registration.py
backend/model/registrations/: registration.py  registrations_constants.py
backend/model/ticket_types/: ticket_types.py
backend/repository/: admins_repository.py  discount_repository.py  evaluations_repository.py  events_repository.py  faqs_repository.py  payment_tracking_repository.py  payment_transaction_repository.py  preregistrations_repository.py  registrations_repository.py  repository_utils.py  ticket_type_repository.py
backend/resources/: api.yml  api_gateway.yml  dynamodb.yml  frontend_role.yml  frontend_urls.yml  functions.yml  package.yml  s3.yml  sqs.yml
backend/scripts/: change_discount_code_uses.py  deploy_dev.sh  export_registrations_to_excel.py  generate-env.py  import_pre_registration_from_csv.py  migrate_event_model.py  resend_confirmation_email.py
backend/usecase/: admin_usecase.py  certificate_usecase.py  discount_usecase.py  email_usecase.py  evaluation_usecase.py  event_usecase.py  export_data_usecase.py  faqs_usecase.py  file_s3_usecase.py  file_upload_usecase.py  payment_tracking_sqs_usecase.py  payment_tracking_usecase.py  payment_usecase.py  preregistration_usecase.py  pycon_registration_email_notification.py  pycon_registration_usecase.py  registration_usecase.py
backend/utils/: logger.py  utils.py
backend/utils/pii/: pii_masking.py  test_pii_masking.py
frontend/: .env.example  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc.json  README.md  components.json  dummy_amplify_outputs copy.json  dummy_amplify_outputs.json  index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts  vitest.config.mts
frontend/amplify/: backend.ts
frontend/scripts/: README.md  generate-all.mjs  generate-amplify-outputs.mjs  generate-env.mjs  runScript.js  utils.mjs
frontend/src/: App.tsx  main.tsx
frontend/src/api/: admin.ts  auth.ts  discounts.ts  evaluations.ts  events.ts  payments.ts  preregistrations.ts  registrations.ts  test.ts
frontend/src/assets/: paymentGatewaysIcons.tsx  techtix.ts
(+320 files in other folders)
